# ETHDenver2025

./: .gitignore  .railwayignore  .replit  .replitignore  .vercelignore  DexyBot_byTeamVinRouge.pptx  LICENSE  README.md  REPLIT_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  chatbot.py  index.html  nixpacks.toml  prepare_vercel.sh  railway.json  railway.toml  replit.nix  requirements.txt  run_tests.sh  server.py  test_api_automated.py  test_api_local.py  test_replit.py  test_vercel_handler.py  vercel.json
Mean_Reversion/: README.md  advanced_strategy.py  algo_trading_toolkit.py  docs.md  example.py  example_usage.md  example_usage.txt  technical_indicators.py  test_indicators.py  test_mean_reversion.py  test_mean_reversion_output.txt  token_price_tool.py
Onchain_Signal/: 2_factor.py
api/: index.html  index.py  requirements.txt
dexy/: .gitignore  UI_README.md  chatbot.py  mult.py  pyproject.toml  run_ui.sh  server.py  server_mock.py  telegram_bot.py
dexy/static/js/: win97.js
dexy/tools/mean_reversion/: README.md  README_SIMPLIFIED.md  __init__.py  advanced_strategy.py  algo_trading_toolkit.py  defillama_example.py  docs.md  example.py  integrated_demo.py  integration_changes.txt  langchain_tools.py  mean_reversion_demo.py  test_api.py  test_indicators.py  test_mean_reversion.py  test_ohlc.py
dexy/tools/mean_reversion/core/: README.md  api.py  indicators.py
dexy/tools/mean_reversion/tools/: README.md  langchain_tools.py
dexy/tools/multiply/: __init__.py  multiply.py
dexy/tools/whalesignal/: __init__.py  risk_multiplier.py  whale_dominance.py
static/css/: win97.css
(+10 files in other folders)
